header ready at 45%

--- a/view/main/css/styles.css
+++ b/view/main/css/styles.css
@@ -2,11 +2,105 @@
     padding: 0;
     margin: 0;
 }
+.rows{
+    display: flex;
+    flex-direction: row;
+}
+.columns{
+    display: flex;
+    flex-direction: column;
+}
 
 .header{
+    display: flex;
+    flex-direction: column;
     background: #F099C0;
     height: 150px;
 }
 .wrapper{
-    margin: 0 160px;
+    margin: auto 160px;
+    
+}
+
+.row_top{
+    justify-content: space-between;
+}
+.wrapper_logo{
+    width: 30%;
+    /* align-items: center; */
+}
+.logo{
+    max-height: 80px;
+    
+}
+.row_bottom{
+    justify-content: space-around;
+    
+}
+.row_bottom a{
+    justify-content: space-around;
+    text-transform: uppercase;
+    color: azure;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 26px;
+    line-height: 24px;
+
+    /* border: 1px solid blue; */
+}
+
+.block_contacts{
+    
+    justify-content: space-around;
+   padding-top: 20px;
+   padding-bottom: 20px;
+    width: 70%;
+}
+.block_phone{
+    color: azure;
+    align-items: center;
+    justify-content: center;
+    
+}
+.block_phone a{
+    display: block;
+    /* margin-top: 10px; */
+    color: azure;
+    text-decoration: none;
+    font-size: 32px;
+    line-height: 32px;
+}
+.pnote_signature{
+    display: block;
+    color: azure;
+    margin: 0 auto;
+    font-size: 15px;
+    line-height: 20px;
+    font-weight: 600;
+}
+.order_call{
+    background: #fff ;
+    border-radius: 15px;
+    text-transform: uppercase;
+    color: #F01F9A;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 18px;
+    line-height: 18px;
+    font-weight: 600;
+    border: none;
+}
+.order_call:hover{
+    background: #fff ;
+    color: #F01F9A;
+    border: none;
+}
+.watsap{
+    margin: auto 0;
+    border-radius: 10px;
+    padding: 10px 5px;
+    text-transform: uppercase;
+    max-width: 55px;
+    max-height: 55px;
+    border-radius: 10px;
 }
